@@ -1,3 +1,14 @@
+Mon Jul 13 15:52:52 2020  Rob Lauer  <rlauer6@comcast.net>
+
+	* makala/aws/vpc_config.py:
+	- get_private_subnet_ids() for default subnets
+	- log messages
+
+Mon Jul 13 15:51:32 2020  Rob Lauer  <rlauer6@comcast.net>
+
+	* makala/utils.py:
+	(get_private_subnet_ids): new
+
 Mon Jul 13 13:54:36 2020  Rob Lauer  <rlauer6@comcast.net>
 
 	* makala/makala_config.py: for int parameters
